welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: ')' expected but 'else' found.
	if(getX()=(getMondeLargeur()-1 && getY() == getMondeHauteur()-1){true}else{false}
                                                                              ^